tests/baselines/reference/typeInferenceTypePredicate.errors.txt
typeInferenceTypePredicate.ts(3,25): error TS2677: A type predicate's type must be assignable to its parameter's type.
  Type 'number' is not assignable to type '{}'.


==== typeInferenceTypePredicate.ts (1 errors) ====
    declare function f<T>(predicate: (x: {}) => x is T): T;
    // 'res' should be of type 'number'.
    const res = f((n): n is number => true);
                            ~~~~~~
!!! error TS2677: A type predicate's type must be assignable to its parameter's type.
!!! error TS2677:   Type 'number' is not assignable to type '{}'.
    